remove avoid break inside bill list

--- a/resources/assets/sass/invoice_pdf.scss
+++ b/resources/assets/sass/invoice_pdf.scss
@@ -54,7 +54,6 @@ table.totals td {
 }
 .bill_list {
     width: 100%;
-    break-inside: avoid;
 }
 .bill_list td {
     border-left: 1px solid grey;
